updated register page

--- a/templates/register.html
+++ b/templates/register.html
@@ -73,7 +73,9 @@
                     <label for="googleFolderLink">Google Drive Folder Link</label>
                     <input type="url" id="googleFolderLink" name="googleFolderLink" 
                            placeholder="https://drive.google.com/drive/folders/..." required>
-                    <small class="help-text">Share a Google Drive folder where your files will be stored</small>
+                    <small class="help-text">
+                        <a href="https://www.youtube.com/watch?v=O8zrGXEnzdY" target="_blank">Share a Google Drive folder where your files will be stored</a>
+                    </small>
                 </div>
 
                 <button type="button" id="registerButton" class="login-button">Create Account</button>
